# infrastructure

./: .gitignore  README.md  README.zh.md  __init__.py  pyproject.toml  unified_emergence.py  涌现_触发响应.md  涌现引擎进化备忘.md
config/: fishery_glossary_wikipedia.json  gbt8588_terms.json
logs/: catalog_feedback.jsonl
src/: __init__.py  chinese_nlp.py  fish_classifier.py  fish_detector.py  perception_bridge.py
src/deepseek/: __init__.py  grpo_evolution.py  mla_graph.py  moe_router.py  multi_hypothesis.py  speculative.py
src/holland/: __init__.py  aggregation.py  blocks.py  cas_engine.py  diversity.py  flows.py  internal_models.py  nonlinear.py  tagging.py
tests/: test_deepseek.py  test_holland.py  test_integration.py  test_unified_emergence.py
